# lhc-sharing

./: .gcloudignore  .gitignore  Dockerfile  build_files.sh  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  vercel.json
api/: wsgi.py
events/: admin.py  models.py  views.py
events/migrations/: 0001_initial.py  0002_event_details_alter_occurrence_event.py  0003_remove_eventtype_description_alter_event_description_and_more.py  0004_occurrence_closer_occurrence_opener.py  0005_occurrence_is_break_alter_event_description.py  0006_occurrence_attendees.py
lhc_sharing/: asgi.py  entry.py  settings.py  urls.py  wsgi.py
music/: admin.py  apps.py  forms.py  models.py  views.py
music/migrations/: 0001_initial.py  0002_song_current.py  0003_file_filetype.py  0004_alter_file_file.py  0005_song_files.py  0006_song_slug_delete_file.py  0007_song_embed.py
music/templatetags/: music.py
static/: admin.css  main.css
templates/: base.html  files.html  home.html  songs.html
templates/account/: signup_closed.html
templates/account/email/: base.html  base_mailchimp.html  password_reset_key_message.html
templates/admin/: base_site.html
templates/events/: attendance_register.html  attendance_success.html  mark_attendance.html  monthly_view.html  occurrence.html  occurrence_grid_signup.html  occurrence_printable_schedule.html  signup.html
templates/flatpages/: default.html
templates/swingtime/: monthly_view.html  occurrence.html
tests/: test_events.py  test_events_admin.py  test_events_views.py  test_music.py  test_printable_schedule.py
(+5 files in other folders)
