[project]
name = "lhc-sharing"
version = "0.1.0"
description = "LHC membership site"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5",
    "django",
    "django-allauth",
    "django-crispy-forms",
    "django-direct-cloud-upload",
    "django-environ",
    "django-gmailapi-backend",
    "django-invitations",
    "gunicorn>=23.0.0",
    "mailchimp-marketing",
    "markdown",
    "psycopg2-binary",
    "sentry-sdk[django]>=2.43.0",
    "whitenoise>=6.11.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "lhc_sharing.settings"

[[tool.mypy.overrides]]
module = [
  "allauth.*",
  "direct_cloud_upload.*",
  "environ.*",
  "google.*",
  "invitations.*",
  "mailchimp_marketing.*",
]
ignore_missing_imports = true


[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# ignore migration files
exclude = ["**/migrations/*", "oauth2.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lhc_sharing.settings"

[tool.uv.sources]
django-direct-cloud-upload = { git = "https://github.com/danielroseman/django-direct-cloud-upload" }

[dependency-groups]
dev = [
    "django-stubs",
    "ipython",
    "mypy",
    "pytest",
    "pytest-django",
    "types-markdown",
    "types-python-dateutil",
]
